force-app/main/default/objects/student__c/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>