force-app/main/default/objects/student__c/fields/Have_Wehicle__c.field-meta.xml
<CustomField>
    <fullName>Have_Wehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Wehicle</label>
    <type>Checkbox</type>
</CustomField>