force-app/main/default/objects/student__c/fields/isStaffAccount__c.field-meta.xml
<CustomField>
    <fullName>isStaffAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStaffAccount</label>
    <type>Checkbox</type>
</CustomField>