force-app/main/default/objects/student__c/fields/Marrieds__c.field-meta.xml
<CustomField>
    <fullName>Marrieds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Married</label>
    <type>Checkbox</type>
</CustomField>