force-app/main/default/objects/student__c/fields/Selected_Subject__c.field-meta.xml
<CustomField>
    <fullName>Selected_Subject__c</fullName>
    <label>Selected Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>