force-app/main/default/objects/student__c/fields/Wife_Name__c.field-meta.xml
<CustomField>
    <fullName>Wife_Name__c</fullName>
    <label>Wife Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>