force-app/main/default/objects/student__c/listViews/AA.listView-meta.xml
<ListView>
    <fullName>AA</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Sex__c</field>
        <operation>equals</operation>
        <value>Male</value>
    </filters>
    <label>A</label>
</ListView>